--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "owenvoke/blade-fontawesome": "^2.6"
+        "owenvoke/blade-fontawesome": "^2.6",
+        "phpcfdi/sat-ws-descarga-masiva": "^0.5.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
