--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "ariaieboy/filament-currency": "^1.10",
+        "awcodes/filament-table-repeater": "^3.0",
         "eclipxe/cfdiutils": "^2.29",
         "eightynine/filament-excel-import": "^3.1",
         "filament/filament": "^3.2",
