--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "phpcfdi/cfditopdf": "^0.4.2",
         "phpcfdi/sat-ws-descarga-masiva": "^0.5.4",
         "phpoffice/phpspreadsheet": "^1.29",
-        "solution-forest/filament-simplelightbox": "^0.0.10"
+        "solution-forest/filament-simplelightbox": "^0.0.10",
+        "torgodly/html2media": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
