--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/typography": "^0.5.15",
-        "autoprefixer": "^10.4.20",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.49",
+        "postcss": "^8.5.3",
         "postcss-nesting": "^13.0.1",
-        "tailwindcss": "^3.4.15",
+        "tailwindcss": "^3.4.17",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.1.4"
     }
 }
