--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "awcodes/filament-table-repeater": "^3.0",
         "barryvdh/laravel-snappy": "^1.0",
         "codewithdennis/filament-theme-inspector": "^0.0.7",
+        "dvarilek/filament-table-select": "^2.0",
         "eclipxe/cfdiutils": "^2.29",
         "eightynine/filament-excel-import": "^3.1",
         "eightynine/filament-reports": "^3.0",
