--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "joaopaulolndev/filament-pdf-viewer": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "luecano/numero-a-letras": "^4.0",
         "maatwebsite/excel": "^3.1",
         "nahidulhasan/html2pdf": "^1.4",
         "owenvoke/blade-fontawesome": "^2.6",
