--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "phpmailer/phpmailer": "^6.10",
         "phpoffice/phpspreadsheet": "^1.29",
         "solution-forest/filament-simplelightbox": "^0.0.10",
-        "torgodly/html2media": "^1.1"
+        "torgodly/html2media": "^1.1",
+        "ext-calendar": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
