--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "phpoffice/phpspreadsheet": "^1.29",
         "solution-forest/filament-simplelightbox": "^0.0.10",
         "torgodly/html2media": "^1.1",
-        "ext-calendar": "*"
+        "ext-calendar": "*",
+        "ext-zip": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
