--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-calendar": "*",
         "ext-intl": "*",
         "ext-soap": "*",
+        "ext-zip": "*",
         "ariaieboy/filament-currency": "^1.10",
         "asmit/resized-column": "^1.1",
         "awcodes/filament-sticky-header": "^2.0",
@@ -36,9 +38,7 @@
         "phpmailer/phpmailer": "^6.10",
         "phpoffice/phpspreadsheet": "^1.29",
         "solution-forest/filament-simplelightbox": "^0.0.10",
-        "torgodly/html2media": "^1.1",
-        "ext-calendar": "*",
-        "ext-zip": "*"
+        "torgodly/html2media": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
