--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
         "owenvoke/blade-fontawesome": "^2.6",
         "pelmered/filament-money-field": "^1.4",
         "phpcfdi/cfdi-expresiones": "^3.2",
+        "phpcfdi/cfdi-sat-scraper": "^5.0",
         "phpcfdi/cfditopdf": "^0.4.2",
+        "phpcfdi/credentials": "^1.3",
         "phpcfdi/sat-ws-descarga-masiva": "^0.5.4",
         "phpmailer/phpmailer": "^6.10",
         "phpoffice/phpspreadsheet": "^1.29",
