--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         "eightynine/filament-excel-import": "^3.1",
         "eightynine/filament-reports": "^3.0",
         "filament/filament": "^3.2",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "jimmyjs/laravel-report-generator": "^2.2",
         "joaopaulolndev/filament-pdf-viewer": "^1.0",
         "laravel/framework": "^11.9",
