--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.4"
+        "@tailwindcss/vite": "^4.1.4",
+        "puppeteer": "^24.29.1"
     }
 }
