--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "phpmailer/phpmailer": "^6.10",
         "phpoffice/phpspreadsheet": "^1.29",
         "shuchkin/simplexlsx": "^1.1",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "solution-forest/filament-simplelightbox": "^0.0.10",
         "spatie/browsershot": "^5.0",
         "torgodly/html2media": "^1.1"
