--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "filament/filament": "^3.2",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
+        "ianw/quickchart": "^1.3",
         "jimmyjs/laravel-report-generator": "^2.2",
         "joaopaulolndev/filament-pdf-viewer": "^1.0",
         "laravel/framework": "^11.9",
