--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.4",
-        "puppeteer": "^24.29.1"
+        "jquery": "^3.7.1",
+        "puppeteer": "^24.29.1",
+        "quickchart-js": "^3.1.3"
     }
 }
