--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-bcmath": "*",
         "ext-calendar": "*",
         "ext-curl": "*",
         "ext-dom": "*",
@@ -24,6 +25,7 @@
         "dompdf/dompdf": "^3.1",
         "dvarilek/filament-table-select": "^2.0",
         "eclipxe/cfdiutils": "^2.29",
+        "eightynine/filament-advanced-widgets": "^3.0",
         "eightynine/filament-excel-import": "^3.1",
         "eightynine/filament-reports": "^3.0",
         "filament/filament": "^3.2",
@@ -52,8 +54,7 @@
         "simplesoftwareio/simple-qrcode": "^4.2",
         "solution-forest/filament-simplelightbox": "^0.0.10",
         "spatie/browsershot": "^5.0",
-        "torgodly/html2media": "^1.1",
-        "ext-bcmath": "*"
+        "torgodly/html2media": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
