--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-intl": "*",
         "ext-soap": "*",
         "ext-zip": "*",
+        "alperenersoy/filament-export": "^3.0",
         "ariaieboy/filament-currency": "^1.10",
         "asmit/resized-column": "^1.1",
         "awcodes/filament-sticky-header": "^2.0",
@@ -20,6 +21,7 @@
         "aymanalhattami/filament-context-menu": "^1.0",
         "barryvdh/laravel-dompdf": "^3.1",
         "barryvdh/laravel-snappy": "^1.0",
+        "calebporzio/sushi": "^2.5",
         "codewithdennis/filament-theme-inspector": "^0.0.7",
         "defstudio/filament-searchable-input": "^1.0",
         "dompdf/dompdf": "^3.1",
@@ -28,6 +30,7 @@
         "eightynine/filament-advanced-widgets": "^3.0",
         "eightynine/filament-excel-import": "^3.1",
         "eightynine/filament-reports": "^3.0",
+        "fibtegis/filament-infinite-scroll": "^1.0",
         "filament/filament": "^3.2",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
