--- a/composer.json
+++ b/composer.json
@@ -51,13 +51,15 @@
         "phpcfdi/credentials": "^1.3",
         "phpcfdi/image-captcha-resolver-boxfactura-ai": "^0.2.0",
         "phpcfdi/sat-ws-descarga-masiva": "^0.5.4",
+        "phpcfdi/sat-ws-descarga-masiva-cli": "^0.0.2",
         "phpmailer/phpmailer": "^6.10",
         "phpoffice/phpspreadsheet": "^1.29",
         "shuchkin/simplexlsx": "^1.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "solution-forest/filament-simplelightbox": "^0.0.10",
         "spatie/browsershot": "^5.0",
-        "torgodly/html2media": "^1.1"
+        "torgodly/html2media": "^1.1",
+        "watheqalshowaiter/filament-sticky-table-header": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
